# Werkstatt-Motion

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: AdvancedFeatures.test.tsx  App.test.tsx  App.tsx  HiddenArea.test.tsx  api.ts  main.tsx  money.test.ts  money.ts  types.ts  updates.ts  useLongPress.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: backup.rs  commands.rs  crypto.rs  db.rs  error.rs  hidden.rs  keys.rs  main.rs  models.rs
apps/desktop/src/components/: AppShell.tsx  CustomerAutocomplete.tsx  Header.tsx  HiddenPanel.tsx  HistoryWorkspace.tsx  InlineMoneyField.tsx  InlineTextField.test.tsx  InlineTextField.tsx  PaymentsPanel.tsx  PrimaryButton.tsx  SearchInput.tsx  StatusToggle.tsx  UndoBar.tsx  VehicleRow.tsx  VehicleTable.tsx
apps/desktop/src/data/: mock.ts
apps/desktop/src/styles/: app.css  tokens.css
apps/desktop/src/test/: fakeBackend.ts  setup.ts
docs/: RELEASES.md
