[package]
name = "werkstatt-manager"
version = "0.1.0"
description = "Werkstatt Manager – Desktop-App für den Werkstattalltag"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
